@@ -28,6 +28,7 @@ class ExtensionGenerator < Rails::Generator::NamedBase
       m.template 'extension.rb',        "#{extension_path}/#{extension_file_name}.rb"
       m.template 'tasks.rake',          "#{extension_path}/lib/tasks/#{extension_file_name}_tasks.rake"
       m.template 'en.yml',              "#{extension_path}/config/locales/en.yml"
+      m.template 'routes.rb',           "#{extension_path}/config/routes.rb"
       
       if options[:with_test_unit]
         m.directory "#{extension_path}/test/fixtures"
