@@ -1,0 +1,5 @@
+ActionController::Routing::Routes.draw do |map|
+  # map.namespace :admin, :member => { :remove => :get } do |admin|
+  #   admin.resources :<%= file_name %>
+  # end
+end
