@@ -28,6 +28,19 @@ describe Radiant::Extension do
     BasicExtension.migrations_path.should == "#{RADIANT_ROOT}/test/fixtures/extensions/basic/db/migrate"
   end
   
+  describe BasicExtension do
+    its(:routing_file) { should match '/extensions/basic/config/routes.rb' }
+  end
+  
+  context "when the routing_file exists" do
+    subject { RoutedExtension }
+    it { should be_routed }
+  end
+  context "when the routing_file does not exist" do
+    subject { BasicExtension }
+    it { should_not be_routed }
+  end
+  
   it "should set the extension_name in subclasses" do
     Kernel.module_eval { class SuperExtension < Radiant::Extension; end }
     SuperExtension.extension_name.should == "Super"
