@@ -1,0 +1,2 @@
+class RoutedExtension < Radiant::Extension
+end
